--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "corsano-realm-converter",
   "version": "1.0.0",
   "description": "Konvertiere die .realm Dateien, welche wir von Corsano bekommen in JSON um",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luca Leon Happel",
