--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luca Leon Happel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "realm": "^11.3.1"
+  }
 }
