--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Konvertiere die .realm Dateien, welche wir von Corsano bekommen in JSON um",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start-ios": "node src/index.js ios",
+    "start-android": "node src/index.js android",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luca Leon Happel",
